Mon May 31 09:04:48 CEST 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

	* ACE version 5.7.9 released.

Sat May 29 02:18:06 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/config-macosx-leopard.h:

          Added ACE_HAS_VOID_UNSETENV.
        
Sat May 29 02:08:16 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * ace/ace_for_tao.mpc:

          Added Process_Manager, which is used in CIAO.

Fri May 28 19:56:20 UTC 2010 Chad Beaulac <chad.beaulac@objectivesolutions.com>

        * ace/Service_Repository.cpp:
          Fixed memory leak by removing this->service_array_[i] = 0
          in fini method.
          Bug was introduced by #3334 fix. This fixes it thanks
          to Vladimir Zykov for pointing this out.

Fri May 28 16:16:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Add tpp to cpp files list

Mon May 24 15:17:41 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Use $(KEEP_GOING) so that when make is run with -k and multiple
          commands are run for a single target, subsequent commands are tried
          even if the earlier command fails.

Mon May 24 14:42:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_dirent.cpp:
          Small code improvements to closedir

        * tests/FlReactor_Test.cpp:
          Small changes

Mon May 24 14:40:11 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * include/makeinclude/rules.lib.GNU:

          Fixed a bug introduced by my earlier commit of this file today.
          The value needs to be different in LN_S=cp vs. LN_S=ln scenarios.

        * include/makeinclude/rules.local.GNU:

          Echo back the ln or cp command used for symlinking/copying the
          library or executable to the libout/dllout/exeout location.
          This takes the place of the old "Installing..." messages which are