@@ -84,101 +84,101 @@ of the ACE, TAO, and CIAO micro release kit is available for
   <TR><TH>Filename</TH><TH>Description</TH><TH>Full</TH><TH>Sources only</TH></TR>
   <TR><TD>ACE+TAO+CIAO.tar.gz</TD>
       <TD>ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.9.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.9.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO.tar.bz2</TD>
       <TD>ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.9.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.9.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO+CIAO.zip</TD>
       <TD>ACE+TAO+CIAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-5.7.9.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO+CIAO-src-5.7.9.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.tar.gz</TD>
       <TD>ACE+TAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.9.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.9.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.tar.bz2</TD>
       <TD>ACE+TAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.9.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.9.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE+TAO.zip</TD>
       <TD>ACE+TAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-5.7.9.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE+TAO-src-5.7.9.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.tar.gz</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.9.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.tar.bz2</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.9.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE-html.zip</TD>
       <TD>Doxygen documentation for ACE+TAO+CIAO (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-html-5.7.9.zip">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.tar.gz</TD>
       <TD>ACE only (tar+gzip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.9.tar.gz">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.8.tar.gz">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.8.tar.gz">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.9.tar.gz">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.9.tar.gz">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.tar.bz2</TD>
       <TD>ACE only (tar+bzip2 format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.9.tar.bz2">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.8.tar.bz2">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.8.tar.bz2">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.9.tar.bz2">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.9.tar.bz2">FTP</A>]
       </TD>
   </TR>
   <TR><TD>ACE.zip</TD>
       <TD>ACE only (zip format)</TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-5.7.9.zip">FTP</A>]
       </TD>
-      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.8.zip">HTTP</A>]
-          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.8.zip">FTP</A>]
+      <TD>[<A HREF="http://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.9.zip">HTTP</A>]
+          [<A HREF="ftp://download.dre.vanderbilt.edu/previous_versions/ACE-src-5.7.9.zip">FTP</A>]
       </TD>
   </TR>
 </TABLE>
@@ -296,9 +296,9 @@ of the ACE, TAO, and CIAO micro release kit is available for
 <P>
 
 
-<LI> <A NAME="stable-beta"></A><B>Latest BFO Micro Release.</B> The 
+<LI> <A NAME="stable-beta"></A><B>Latest BFO Micro Release.</B> The
 Bug Fix Only micro release for the latest release of ACE 5.7, TAO 1.7, CIAO 0.7
-is ACE 5.7.1, TAO 1.7.1 and CIAO 0.7.1 (ACE+TAO+CIAO x.7.1).Please use 
+is ACE 5.7.1, TAO 1.7.1 and CIAO 0.7.1 (ACE+TAO+CIAO x.7.1).Please use
 the links below to download it.
 
 <TABLE BORDER="4">
@@ -410,7 +410,7 @@ the links below to download it.
   Older versions of ACE+TAO are also available via HTTP at  <A
   HREF="http://download.dre.vanderbilt.edu/previous_versions">this location</A>
   . This location has a few of the previous major and minor
-  releases. This location will house all major, minor, and micro releases 
+  releases. This location will house all major, minor, and micro releases
   distributed after ACE+TAO-5.2+1.2.
 </P>
 
@@ -421,12 +421,12 @@ the links below to download it.
     <A HREF="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/">
       via the web</A>.
   </LI>
-  <li>ACE+TAO+CIAO source code may be obtained from the 
+  <li>ACE+TAO+CIAO source code may be obtained from the
     <a href="https://svn.dre.vanderbilt.edu/viewvc/Middleware/trunk/ACE/ACE-INSTALL.html?revision=HEAD#power">Subversion repository</a>.</li>
   <LI>Commercially supported versions of ACE+TAO are available from
     <A HREF="http://www.dre.vanderbilt.edu/support.html">several companies</A>.
-  <LI>RPMs for CentOS, Fedora, Mandriva, RHEL, SLE, and OpenSuSe are available from the 
-    <A HREF="http://software.opensuse.org/search">OpenSuSE build service</A>. 
+  <LI>RPMs for CentOS, Fedora, Mandriva, RHEL, SLE, and OpenSuSe are available from the
+    <A HREF="http://software.opensuse.org/search">OpenSuSE build service</A>.
   <LI> Ken Sedgwick's <A HREF="http://dist.bonsai.com/ken/ace_tao_rpm/">Fedora
       RPMs</A> for ACE and TAO.
 </UL><P>
