@@ -22,7 +22,7 @@
         </P>
       </LI>
       <LI><P>
-	  Documentation for the latest micro release kit is available at 
+	  Documentation for the latest micro release kit is available at
 	  <A HREF="Micro">this site</A>.
 	</P>
       </LI>
@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="5.7.9/html">5.7.9</A></P></LI>
       <LI><P><A HREF="5.7.8/html">5.7.8</A></P></LI>
       <LI><P><A HREF="5.7.7/html">5.7.7</A></P></LI>
       <LI><P><A HREF="5.7.6/html">5.7.6</A></P></LI>
